--- a/pom.xml
+++ b/pom.xml
@@ -17,8 +17,15 @@
 	<properties>
 		<java.version>11</java.version>
 	</properties>
-
+	
 	<dependencies>
+                <dependency>
+                        <groupId>org.springframework.boot</groupId>
+                        <artifactId>spring-boot-devtools</artifactId>
+                        <scope>runtime</scope>
+                        <optional>true</optional>
+                </dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
@@ -52,3 +59,16 @@
 	</build>
 
 </project>
+
+
+
+
+
+
+
+
+
+
+
+
+
